Code adjustments and cleanup